--- a/foundations/03-grouping-selectors/style.css
+++ b/foundations/03-grouping-selectors/style.css
@@ -7,7 +7,8 @@
   background-color: #ffff00;
 }
 
-.btn {
+.blackBack,
+.yellowBack {
   font-size: 28px;
   font-family: Helvetica, 'Times New Roman', sans-serif;
   border: 2px solid #cecbcb;
