--- a/margin-and-padding/02-margin-and-padding-2/style.css
+++ b/margin-and-padding/02-margin-and-padding-2/style.css
@@ -13,11 +13,13 @@ body {
 .title {
   background: #e3f4ff;
   font-size: 16px;
+  padding: 8px;
 }
 
 .content {
   background: #e3f4ff;
   margin-bottom: 8px;
+  padding: 16px 8px;
 }
 
 .button-container {
